# Conformal_Inference_HousePrices

./: Residual_Cascade_Boosting.py  conf_decision_making.py  plot_density.R  plot_density.py  pyproject.toml  res_test.py
data/cleaned/: housing_clean.csv
pickles/: 02-Non-Adaptive.pkl
scripts/: 00-data_prep.py  01-mean_example.py  02-non-adaptive.py  02-split_conf.py  02.5-Non-Adaptive-Plots.py  02.non-adaptive-full.py  03-adaptive-simple.py  03-adaptive.py  AmesHousing.R  Data_Checker.py  coding_problem.py  mean_jackknife.py  mean_jackknife2.py  test.jl  travel-dates.txt  utils.py
scripts/Old/: 02-non-adaptive.py  02.non-adaptive-full.py  03-adaptive.py
