[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.4",
    "lightgbm>=4.5.0",
    "mapie>=0.9.1",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pip>=24.2",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
